2005-03-07  Shaun McCance  <shaunm@gnome.org>

	* charpick/help/C/char-palette.xml:
	- Fixed duplicate ID

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* help/C/figures/charpick-preferences.png:
	* help/C/char-palette.xml: Update documentation for GNOME 2.10.

2005-02-12  Davyd Madeley  <davyd@madeley.id.au>

	* charpick.c: Remove authors name from requiring translation.

2005-02-04  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am: Icons are installed from iconsdir, which might not come
	  of datadir.

2005-01-13  Davyd Madeley  <davyd@madeley.id.au>

	* charpick.c: Fix 163911. Add ¡ for consistancy and use in Spanish.

2004-10-30  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* charpick.c: Use gucharmap to get character descriptions for Unicode
	  characters. Set the tooltip to give a description of the character.
	  Closes bug #129756.

2004-09-28  Vincent Noel  <vnoel@cox.net>

	* charpick.c (force_no_focus_padding): force the button
	not to have any focus padding and let the focus
	indication be drawn on the label itself when space
	is tight. Taken from a patch to the clock applet in bug 147999.
	This is an Evil Hack and should be replaced when the focus
	padding can be accessed through gtk+.

2004-09-27  Mark McLoughlin  <mark@skynet.ie>

	* charpick.png: new icon from Jakub Steiner.

2004-09-06  Shaun McCance  <shaunm@gnome.org>

	* help/C/char-palette-C.omf:
	* help/C/char-palette.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec
	* charpick.c: Fix include.
	* properties.c: (phelp_cb): Use gnome_help_*.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.c: (build_table), (about), (help_cb),
	(charpicker_applet_fill): s/gtk_signal_connect/g_signal_connect
	* charpick.h: ANSI parameter lists.

2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.c: (applet_destroy): Merge fix for bug #148498
	from stable.
