@@ -1,3 +1,8 @@
+2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* charpick.h:
+	* properties.c: Clean up some.
+
 2005-03-07  Shaun McCance  <shaunm@gnome.org>
 
 	* charpick/help/C/char-palette.xml:
